--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -496,10 +496,24 @@ footer{
 }
 
 #list-nama-barang input{
-    margin:5px 0px;
+    margin:5px 20px;
 }
 
 .request-list form{
     text-align:left;
     padding:10px 0px;
+}
+
+.button-barang{
+    padding:5px 8px;
+    margin:0px 20px;
+    background-color: #00CED1;
+    border:1px solid gray;
+    cursor:pointer;
+    border-radius:8%;
+    transition:all .3s;
+}
+
+.button-barang:hover{
+    background-color: #1E90FF;
 }
