--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -488,7 +488,7 @@ footer{
     width:100%;
     height:30%;
     padding:40px 30px;
-    text-align: left;
+    text-align: center;
 }
 
 #list-nama-barang{
@@ -500,20 +500,31 @@ footer{
 }
 
 .request-list form{
-    text-align:left;
+    text-align:center;
     padding:10px 0px;
 }
 
 .button-barang{
-    padding:5px 8px;
+    padding:5px 10px;
     margin:0px 20px;
-    background-color: #00CED1;
-    border:1px solid gray;
+    color:#39394d;
+    background-color: #ebebf2;
+    border:1px solid #ebebf2;
+    box-shadow:1px 1px 1px 1px gray;
     cursor:pointer;
     border-radius:8%;
     transition:all .3s;
 }
 
+.button-barang:visited{
+    border:1px solid #ebebf2;
+}
+
 .button-barang:hover{
-    background-color: #1E90FF;
+    background-color: #fafafc;
+}
+
+.button-barang:active{
+    background-color: #ebebf2;
+    border:1px solid #ebebf2;
 }
