--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -26,6 +26,12 @@ header{
     padding:20px 20px;
     text-align:center;
     border:1px solid gray;
+    box-shadow: 0px 0px 5px 0px gray;
+}
+
+header a{
+    display:inline-block;
+    text-align:center;
 }
 
 header img{
@@ -145,15 +151,6 @@ header img{
     height:1px;
     width:100%;
     background: -webkit-linear-gradient(right, #a6f77b, #2ec06f);
-}
-
-header{
-    box-shadow: 0px 0px 3px 0px black;
-}
-
-header a{
-    display:inline-block;
-    text-align:center;
 }
 
 .col-descript-facility{
@@ -484,29 +481,46 @@ footer{
     margin:0px 10px;
 }
 
+.bg-paper{
+    background-color:#e6f0e9;
+    height:500px;
+}
+
 .request-list{
-    width:100%;
-    height:30%;
+    background-color:white;
+    height:400px;
+    width:70%;
     padding:40px 30px;
-    text-align: center;
+    text-align:left;
+    border:1px solid gray;
+    box-shadow:0px 1px 1px 1px gray;
+}
+
+.request-list p{
+    font-style:italic;
+}
+
+.request-list form{
+    text-align:left;
+    padding:10px 0px;
+}
+
+.request-list form input{
+    margin:5px 20px;
 }
 
 #list-nama-barang{
     padding:10px 0px;
+    text-align:left;
 }
 
 #list-nama-barang input{
     margin:5px 20px;
 }
 
-.request-list form{
-    text-align:center;
-    padding:10px 0px;
-}
-
 .button-barang{
     padding:5px 10px;
-    margin:0px 20px;
+    margin:15px 20px;
     color:#39394d;
     background-color: #ebebf2;
     border:1px solid #ebebf2;
