--- a/CRUD/views/update.hbs
+++ b/CRUD/views/update.hbs
@@ -12,7 +12,7 @@
             <label>Harga : </label>
             <input type="text" name="harga">
             <label>URL Foto : </label>
-            <input type="text" name="urlimage">
+            <input type="file" name="urlimage">
             <label>Deskripsi : </label>
             <textarea cols="80" row="10" name="deskripsi"></textarea>
             <button type="submit">update</button>
