--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -543,11 +543,44 @@ footer{
     border:1px solid #ebebf2;
 }
 
-.tempat_wisata{
-    height:1000px;
+.item_page{
+    padding: 30px 30px;
 }
 
-.list_img_wisata{
-    height : 50px;
-    width : 50px;
+.item_page h1{
+    text-align: center;
+}
+
+.item_page ul li{
+    list-style-type: none;
+    display: grid;
+    margin: 30px 0px;
+    padding: 20px 0px;
+    text-decoration: none;
+}
+
+.item_page ul li a{
+    margin: 20px 0px;
+}
+
+.item_page ul li img{
+    display: inline-block;
+    margin: 0px 0px;
+}
+
+.item_page ul li .item{
+    display:inline-block;
+    color: black;
+    margin: 35px 15px;
+    padding: 10px 0px;
+}
+
+.list-image-item{
+    height: 120px;
+    width: 120px;
+}
+
+.deskripsi{
+    display: inline-block;
+    color: black;
 }
