--- a/CRUD/views/datawisata.hbs
+++ b/CRUD/views/datawisata.hbs
@@ -6,7 +6,7 @@
     <title>Form input data</title>
 </head>
 <body>
-    <form action='/kirim' enctype='multipart/form-data' method='post'>
+    <form action='/kirim-data-wisata' enctype='multipart/form-data' method='post'>
         <label>Nama tempat wisata : </label>
         <input type="text" name="nama_tempat_wisata">
         <label>Lokasi : </label>
