--- a/CRUD/views/index.hbs
+++ b/CRUD/views/index.hbs
@@ -43,6 +43,15 @@
                     </div>
                 </div>
             </div>
+            <div class="Item-menu-inbox">
+                <h2>Masukan Pesan Klien</h2>
+                <div class="Item">
+                    <a href="/pesan/">
+                        <img src="./image_index/inbox.png" class="item-image" alt="">
+                        <h3>Kotak Masuk</h3>
+                     </a>
+                </div>
+            </div>
         </container>
         <footer>
             <div className="bottom-footer">
