--- a/CRUD/views/delete.hbs
+++ b/CRUD/views/delete.hbs
@@ -4,7 +4,7 @@
     </head>
     <body>
         {{#results}}
-        <form action='/hapus/{{ id }}' method='post'>
+        <form action='/pesan/hapus/{{ id }}' method='post'>
             <div>
                 <strong>Yakin?</strong>
                 <button type="submit">Iyaa</button>
