--- a/Admin/public/css/style.css
+++ b/Admin/public/css/style.css
@@ -1,3 +1,70 @@
+.signin-and-signup{
+  display:grid;
+  grid-template-columns: 40% auto;
+  height:100%;
+}
+
+#login h4 a{
+  color:#DC143C;
+}
+.button-signin-and-signup{
+  width:100%;
+  margin:20px 0px;
+  padding:10px 20px;
+  background-color:#DC143C;
+  color:white;
+  border:1px solid #DC143C;
+  cursor: pointer;
+  border-radius:8px;
+  transition:all .3s;
+}
+
+#bg-login{
+  background-image: url("/img/1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  opacity:0.4;
+  width:100%;
+}
+
+#login{
+  padding:40px 40px;
+  border:1px solid gray;
+  border-radius:5%;
+  justify-self: center;
+  margin:50px auto;
+  text-align: center;
+  display: inline-block;
+  background-color:white;
+  width:40%;
+}
+
+#login p{
+  font-size : 14px;
+}
+
+#login label{
+  display:block;
+  text-align:center;
+  margin:10px 0px;
+}
+
+#login input{
+  display:block;
+  text-align:left;
+  margin:10px 0px;
+  border:none;
+  outline:none;
+  width:100%;
+}
+
+#form-border{
+  height:1px;
+  width:100%;
+  background: -webkit-linear-gradient(right, #a6f77b, #2ec06f);
+}
+
 header{
   padding:20px 20px;
   text-align:center;
@@ -42,6 +109,13 @@ header img{
   padding: 10px 10px;
   margin: 10px 10px;
   border-radius: 8px;
+  transition : all .3s;
+}
+
+.Item:hover {
+  background-color: #F8F8FF;
+  cursor:pointer;
+  box-shadow:2px 4px 4px 1px black;
 }
 
 .Item a{
@@ -66,6 +140,7 @@ header img{
 .table_data,th,td{
   border: 1px solid #999;
   padding: 8px 20px;
+  font-size: 14px; 
 }
 
 .card{
@@ -121,4 +196,8 @@ footer{
 .mytable thead{
   border: 1px solid #999;
   padding: 8px 20px;
+}
+
+.btn{
+  margin: 5px 5px;
 }
