--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -598,3 +598,81 @@ footer{
 .deskripsi p{
     margin: 0;
 }
+
+.About{
+    display:grid;
+    grid-template-columns: 30% auto;
+    margin-bottom: 200px;
+}
+
+.spesification{
+    display:grid;
+    grid-template-rows:repeat(3,auto);
+}
+
+.built-years{
+    border: 1px solid #9c9a97;
+    padding : 20px 40px;
+    margin : 20px 40px;
+    transition: all .3s;
+}
+
+.built-years:hover{
+    box-shadow: 1px 3px 3px 1px black;
+}
+
+.bedroom{
+    border : 1px solid #9c9a97;
+    padding : 20px 40px;
+    margin : 20px 40px;
+    transition: all .3s;
+}
+
+.bedroom:hover{
+    box-shadow: 1px 3px 3px 1px black;
+}
+
+.bedroom img{
+    width: 50px;
+    height: 50px;
+    margin: 0px 20px;
+}
+
+.facility{
+    border:1px solid #9c9a97;
+    display:grid;
+    grid-template-columns:15% auto;
+    padding : 20px 40px;
+    margin : 20px 40px;
+    transition : all .3s;
+}
+
+.facility:hover{
+    box-shadow: 1px 3px 3px 1px black;
+}
+
+.img-facility img{
+    width: 30px;
+    height: 30px;
+    display: block;
+    margin-top: 10px;
+    margin-left:10px;
+    margin-right:0px;
+
+}
+
+.descript-facility span{
+    display: block;
+    margin: 15px 10px;
+}
+
+.info-hotel{
+    border: 1px solid #9c9a97;
+    padding: 20px 20px;
+    transition: all .3s;
+    margin: 20px 15px;
+}
+
+.info-hotel:hover{
+    box-shadow: 1px 3px 3px 1px black;
+}
