--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -658,14 +658,13 @@ footer{
     margin-top: 10px;
     margin-left:10px;
     margin-right:0px;
-
 }
 
 .descript-facility span{
     display: block;
     margin: 15px 10px;
 }
-
+ 
 .info-hotel{
     border: 1px solid #9c9a97;
     padding: 20px 20px;
@@ -675,4 +674,121 @@ footer{
 
 .info-hotel:hover{
     box-shadow: 1px 3px 3px 1px black;
+}
+
+@media screen and (max-width: 768px){
+    header{
+        width: 100%;
+    }
+
+    .col-descript-facility{
+        width: 100%;
+    }
+
+    #review-facility{
+        margin:0px 0px;
+    }
+
+    #slider{
+        overflow:hidden;
+        width:100%;
+        height:675px;
+        margin:50px 0px;
+        justify-self:center;
+    }
+    
+    #slider figure .slide{
+        width:20%;
+        height:100%;
+        float:left;
+    }
+    
+    #slider figure img{
+        width:100%;
+        height:100%;
+        float:left;
+    }
+    
+    #slider figure{
+        position:relative;
+        width:500%;
+        margin:0;
+        left:0;
+        animation:25s slidy infinite;
+    }
+    
+    .slide h1{
+        text-align:center;
+        margin-top:50px;
+        margin-bottom:625px;
+        margin-left:500px;
+        margin-right:100px;
+    }
+
+    #right-middle-footer{
+        padding-left:150px;
+        text-align:left;
+        color:white;
+    }
+
+    .About{
+        display:grid;
+        grid-template-columns: 30% auto;
+        margin-bottom: 150px;
+    }
+
+    .built-years{
+        margin: 20px 20px;
+        padding: 20px 20px;
+    }
+
+    .facility{
+        border:1px solid #9c9a97;
+        display:grid;
+        grid-template-columns:15% auto;
+        padding : 20px 20px;
+        margin : 20px 20px;
+        transition : all .3s;
+    }
+
+    .img-facility img{
+        width: 30px;
+        height: 30px;
+        display: block;
+        margin-top: 10px;
+        margin-left:0px;
+        margin-right:0px;
+    
+    }
+
+    .descript-facility{
+        padding:0px 10px;
+    }
+
+    .descript-facility span{
+        display: block;
+        margin: 15px 5px;
+    }
+
+    .bedroom{
+        border : 1px solid #9c9a97;
+        padding : 20px 20px;
+        margin : 20px 20px;
+        transition: all .3s;
+    }
+    
+    .bedroom:hover{
+        box-shadow: 1px 3px 3px 1px black;
+    }
+    
+    .bedroom img{
+        width: 50px;
+        height: 50px;
+        margin: 0px 40px;
+    }
+    
+    .info-hotel{
+        padding: 20px 20px;
+        margin: 20px 5px;
+    }
 }
