--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -199,7 +199,6 @@ header img{
     margin-right:100px;
 }
 #building{
-    background-image: url(./img/sliders/building.jpg);
     width:100%;
     height:100%;
     float:left;
@@ -207,7 +206,6 @@ header img{
 }
 
 #breakfast{
-    background-image: url(./img/sliders/breakfast.jpg);
     width:100%;
     height:100%;
     float:left;
@@ -215,14 +213,12 @@ header img{
 }
 
 #eatingroom{
-    background-image: url(./img/sliders/eatingroom.jpg);
     width:100%;
     height:100%;
     float:left;
 }
 
 #meetingroom{
-    background-image: url(./img/sliders/meetingroom.jpg);
     width:100%;
     height:100%;
     float:left;
@@ -230,7 +226,6 @@ header img{
 }
 
 #sleepingroom{
-    background-image: url(./img/sliders/sleepingroom.jpg);
     width:100%;
     height:100%;
     float:left;
@@ -742,7 +737,37 @@ footer{
     background-color: #fcd703;
 }
 
+@media screen and (max-width: 1024px){
+    .bedroom img{
+        margin: 0px 60px;
+    }
 
+    .img-facility img{
+        margin-top: 14px;
+    }
+    .descript-facility{
+        padding: 0px 15px;
+    }
+
+    .descript-facility span{
+        display:block;
+        margin: 12px 10px;
+    }
+    
+    .Item-styling img{
+        margin: 20px 20px;
+    }
+
+    .Item-styling h1{
+        font-size: 32px;
+    }
+
+    .lokasi-item{
+        width: 200px;
+        height: 150px;
+        margin: 15px 0px;
+    }
+}
 
 @media screen and (max-width: 768px){
     header{
@@ -866,9 +891,17 @@ footer{
         margin : 20px 20px;
     }
 
+    .Item-styling h1{
+        font-size: 28px;
+    }
+
+    .Item-styling h3{
+        font-size: 24px;
+    }
+
     .lokasi-item{
         width: 150px;
-        height: 100spx;
+        height: 100px;
         margin:20px 30px;
         padding: 20px 10px;
         font-size: 12px;
@@ -878,5 +911,170 @@ footer{
         width: 20px;
         height: 20px;
         margin: 0px 20px;
+    }
+}
+
+@media screen and (max-width: 692px){
+    .fitur h3{
+        font-size: 22px;
+    }
+
+    .fitur p{
+        font-size: 12px;
+    }
+
+    #review-facility h1{
+        font-size: 28px;
+        margin:0px 30px;
+    }
+
+    #slider{
+        overflow:hidden;
+        width:65%;
+        height:380px;
+        margin:50px 20px;
+        justify-self:center;
+    }
+
+    footer{
+        font-size: 12px;
+    }
+
+    footer #right-middle-footer ul{
+        margin-right: 30px;
+        padding-left: 0px;
+    }
+
+    .menu-contact h3{
+        font-size: 15px;
+    }
+
+    .menu-contact p{
+        font-size: 14px;
+    }
+
+    .menu-contact ul{
+        padding: 0px;
+    }
+
+    .menu-contact #menu-sosmed{
+        padding: 0px 50px;
+    }
+
+    .info-hotel{
+        margin: 20px 10px;
+    }
+
+    .info-hotel p{
+        font-size: 14px;
+    }
+
+    .built-years h4{
+        font-size: 18px;
+    }
+
+    .bedroom span{
+        font-size: 18px;
+    }
+
+    .facility{
+        border:1px solid #9c9a97;
+        display:grid;
+        grid-template-columns:15% auto;
+        padding : 20px 10px;
+        margin : 20px 20px;
+        transition : all .3s;
+    }
+
+    .img-facility img{
+        width: 30px;
+        height: 30px;
+        display: block;
+        margin-top: 10px;
+        margin-left:0px;
+        margin-right:0px;
+    }
+
+    .descript-facility span{
+        display:block;
+        margin: 20px 5px;
+        font-size: 12px;
+    }
+
+    .item_page ul li img{
+        display: inline-block;
+        margin-bottom: 15px;
+    }
+
+    .item_page ul li .item{
+        display:inline-block;
+        color: black;
+        margin-right: 15px;
+        margin-left: 15px;
+        margin-top: 15px;
+        padding: 15px 0px;
+    }
+
+    .item h3,p{
+        margin:0px;
+    }
+}
+
+@media screen and (max-width:425px){
+    .welcome h3{
+        font-size: 22px;
+    }
+
+    #review-facility h1{
+        font-size: 14px;
+    }
+
+    #slider{
+        overflow:hidden;
+        width:65%;
+        height:200px;
+        margin:50px 20px;
+        justify-self:center;
+    }
+
+    .fitur p{
+        font-size: 10px;
+    }
+
+    .fitur h3{
+        font-size : 14px;
+    }
+
+    #left-middle-footer{
+        padding: 20px 30px;
+    }
+
+    #right-middle-footer{
+        padding-top:20px;
+        padding-bottom:20px;
+        padding-left:90px;
+    }
+
+    #descript-contact h3{
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    #descript-contact p{
+        font-size: 12px;
+    }
+
+    #contact label{
+        font-size: 12px;
+    }
+
+    #contact input{
+        width: 200px;
+        height: 20px;
+    }
+
+    #contact textarea{
+        width: 240px;
+        height: 100px;
     }
 }
