--- a/Admin/public/css/style.css
+++ b/Admin/public/css/style.css
@@ -270,6 +270,11 @@ footer{
   display: none;
 }
 
+.loading{
+  width: 15px;
+  height: 15px;
+}
+
 @media only screen and (max-width:1024px){
   .card form{
     padding: 0px 20px;
