--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -733,14 +733,14 @@ footer{
     padding: 20px 40px;
 } 
 
-.Item-styling h1,h3,h5{
+.Item-styling h1,h2,h3,h5{
     text-align: center;
 }
 
 .Item-styling img{
     width: 600px;
     height: 700px;
-    margin:20px 100px;
+    margin: 20px 0px;
 }
 
 .update{
@@ -749,10 +749,6 @@ footer{
 
 .img-and-facility{
     display:grid;
-    grid-template-columns:70% auto;
-    grid-template-areas:
-        "img-item"
-        "location-item";
 }
 
 
@@ -761,7 +757,7 @@ footer{
 }
 
 #Img-Item{
-    grid-area: "img-item";
+    justify-self: center;
 }
 
 .rendering-description{
@@ -850,10 +846,6 @@ footer{
     
     .Item-styling img{
         margin: 20px 20px;
-    }
-
-    .Item-styling h1{
-        font-size: 32px;
     }
 
     .lokasi-item{
@@ -1189,9 +1181,6 @@ footer{
     .item_page ul li .item{
         display:inline-block;
         color: black;
-        margin-right: 15px;
-        margin-left: 15px;
-        margin-top: 15px;
         padding: 15px 0px;
     }
 
