--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -846,7 +846,7 @@ footer{
 .item_page ul li .link-item{
     padding: 10px 30px;
     margin: 20px 0px;
-    border: 1px solid black;
+    box-shadow: 2px 4px 10px #706e69;
     border-radius: 8px;
     text-decoration: none;
     background-color: white;
@@ -855,8 +855,9 @@ footer{
 }
 
 .item_page ul li .link-item:hover{
-    box-shadow: 1px 2px 2px 1px black;
+    box-shadow: 2px 8px 22px rgba(17,26,104,.2);
     background-color: white;
+    cursor: pointer;
 }
 
 .facility-meeting{
@@ -2104,6 +2105,10 @@ footer{
         background-color: #e81022;
     }
     /*end*/
+    #contact {
+        padding: 20px 60px;
+    }
+
     .fitur p{
         font-size: 10px;
     }
@@ -2171,6 +2176,10 @@ footer{
         padding:40px 10px;
     }
 
+    .menu-contact ul{
+        padding-left: 50px;
+    }
+
     .item_page {
         padding: 30px 10px;
     }
@@ -2200,8 +2209,8 @@ footer{
     }
 
     #menu-sosmed a img{
-        width: 22%;
-        height: 22%;
+        width: 25px;
+        height: 25px;
         margin:0px 5px;
     }
 
@@ -2611,8 +2620,17 @@ footer{
         font-size: 10px;
     }
 
+    .menu-contact ul{
+        padding-left: 30px;
+    }
+
     #contact{
         padding: 20px 80px;
+    }
+    
+    #contact input{
+        width: 200px;
+        height: 15px;
     }
 
     .item_list{
@@ -2730,6 +2748,11 @@ footer{
         padding: 20px 50px;
     }
 
+    #menu-sosmed a img{
+        height: 18px;
+        width: 18px;
+    }
+
     .item_page h3 {
         font-size: 16px;
     }
@@ -2759,5 +2782,150 @@ footer{
 
     .Item-styling h2{
         font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 250px){
+    #review-facility h1{
+        font-size: 10px;
+    }
+
+    .slider-home{
+        width: 240px;
+        height: 200px;
+    }
+
+    .slides-home{
+        height: 200px;
+    }
+
+    .sliding-home{
+        width: 240px;
+    }
+
+    .sliding-home img{
+        width: 240px;
+        height: 200px;
+    }
+
+    #bg1:checked ~ .first{
+        margin-left:0;
+    }
+    
+    #bg2:checked ~ .first{
+        margin-left:-240px;
+    }
+    
+    #bg3:checked ~ .first{
+        margin-left:-480px;
+    }
+    
+    #bg4:checked ~ .first{
+        margin-left:-720px;
+    }
+    
+    #bg5:checked ~ .first{
+        margin-left:-960px;
+    }
+
+    .navigation-auto{
+        width: 240px;
+    }
+
+    .navigation-manual{
+        width: 240px;
+    }
+
+    #Title-meeting h3 {
+        font-size: 14px;
+    }
+
+    #Title-meeting p {
+        font-size: 12px;
+    }
+
+    #Title-meeting .main-price {
+        font-size: 10px;
+    }
+
+    #Title-meeting .coret-price {
+        font-size: 10px;
+    }
+
+    .item_meeting_list .facility-meeting li {
+        font-size: 10px;
+    }
+
+    .item_meeting_list .item_meeting {
+        padding: 20px 20px;
+    }
+
+    .item_page .item_meeting .link-item {
+        padding: 10px 5px;
+    }
+
+    .slider{
+        display: flex;
+        width: 230px;
+        height: 200px;
+        overflow: hidden;
+        margin: 0 auto;
+        border-radius: 10px;
+    }
+    
+    .slides{
+        width: 300%;
+        height: 200px;
+        display: flex;
+    }
+    
+    .slides input{
+        display: none;
+    }
+    
+    .sliding{
+        width: 230px;
+        transition: 2s;
+    }
+    
+    .sliding img{
+        width: 230px;
+        height: 200px;
+    }
+    
+    #radio1:checked ~ .first{
+        margin-left:0;
+    }
+    
+    #radio2:checked ~ .first{
+        margin-left:-230px;
+    }
+    
+    #radio3:checked ~ .first{
+        margin-left:-460px;
+    }
+
+    #For-meeting-package ul h3 {
+        font-size: 12px;
+    }
+
+    #For-meeting-package #menu-sosmed h3 {
+        font-size: 12px;
+    }
+
+    .menu-contact ul {
+        padding-left: 10px;
+    }
+
+    .menu-contact #menu-sosmed {
+        padding: 0px 20px;
+    }
+
+    #contact {
+        padding: 20px 20px;
+    }
+
+    #contact textarea{
+        width: 200px;
     }
 }
